# fassert

./: LICENSE.txt  README.md  setup.cfg
fassert/: __init__.py
tests/: test_configuration.py  test_custom_types.py  test_iterables.py  test_misc.py  test_primitives.py
