[metadata]
name = fassert
version = attr: fassert.__version__
author = Martin Carnogursky
author_email = admin@sourcecode.ai
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SourceCode-AI/fassert
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = fuzzy, assert, matching, nested


[options]
packages = fassert
python_requires = >=3.8
